[package]
name = "shell"
version = "0.1.0"
authors = ["Oleh Pykulytsky <pykulytsky@gmail.com>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
crossterm = "0.28.1"
glob = "0.3.2"
libc = "0.2.172"
nix = { version = "0.30.1", features = ["term"] }
thiserror = "1.0.38"                             # error handling
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7.15"
